# sigil

./: .gitignore  CHANGELOG.md
.omc/: project-memory.json
client/: .gitignore  Cargo.toml  README.md  flake.nix
client/.omc/state/: agent-replay-917fc5ca-2e4c-4fc8-96b0-281a2072f249.jsonl  last-tool-error.json  subagent-tracking.json
client/crates/messenger-client/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client/crates/messenger-client/public/webcodecs/: transcode-worker.js
client/crates/messenger-client/src/: app.rs  i18n.rs  icons.rs  lib.rs  main.rs  media_transcode.rs  mock.rs  notify.rs  routes.rs  sound.rs  tauri_bridge.rs  theme.rs
client/crates/messenger-client/src/chat/: chat_header.rs  group_sheet.rs  image_lightbox.rs  input_bar.rs  media_stream.rs  media_viewer.rs  message_bridge.rs  message_item.rs  message_list.rs  mod.rs  new_chat_dialog.rs  profile_sheet.rs  thread_panel.rs  voice_message.rs
client/crates/messenger-client/src/components/: alert.rs  alert_dialog.rs  avatar.rs  avatar_picker.rs  badge.rs  button.rs  card.rs  checkbox.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  input.rs  label.rs  mod.rs  popover.rs  progress.rs  qr_scanner.rs  radio.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  skeleton.rs  slider.rs  switch.rs  tabs.rs  textarea.rs  toast_container.rs  tooltip.rs
client/crates/messenger-client/src/i18n/: en.rs  mod.rs  ru.rs
client/crates/messenger-client/src/screens/: chats.rs  connect.rs  invite.rs  login.rs  login_qr.rs  login_token.rs  mod.rs  register.rs  settings.rs
client/crates/messenger-client/src/session/: mod.rs  restore.rs
client/crates/messenger-client/src/settings/: about.rs  account.rs  admin_invites.rs  admin_users.rs  appearance.rs  devices.rs  mod.rs  notifications.rs  privacy.rs  voice.rs
client/crates/messenger-client/src/sidebar/: chat_list.rs  mod.rs  real_chat_list.rs
client/crates/messenger-client/style/: built.css  main.css
client/crates/messenger-core/: Cargo.toml
client/crates/messenger-core/src/: age_wrap.rs  attachment_crypto.rs  blind_index.rs  bootstrap.rs  bootstrap_seal.rs  canonical.rs  ed25519.rs  error.rs  identity.rs  lib.rs  prov.rs  video_remux.rs  voice.rs
client/crates/messenger-core/tests/: server_info.rs
client/crates/messenger-proto/: Cargo.toml
client/crates/messenger-proto/src/: admin.rs  attachments.rs  auth.rs  error.rs  invites.rs  keypackages.rs  lib.rs  mls.rs  provisioning.rs  reactions.rs  server.rs  users.rs  ws.rs
client/crates/messenger-storage/: Cargo.toml
client/crates/messenger-storage/src/: error.rs  lib.rs  migrations.rs  storage_init.rs  traits.rs  types.rs
client/crates/messenger-transcription/: Cargo.toml
client/crates/messenger-transcription/src/: audio.rs  downloader.rs  error.rs  lib.rs  models.rs  transcriber.rs
client/scripts/: android-smoke.sh
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  file_saver.rs  lib.rs  main.rs  stream.rs  transcription.rs
client/src-tauri/tauri-plugin-android-keystore/: .gitignore  Cargo.toml  build.rs
client/src-tauri/tauri-plugin-android-keystore/android/: build.gradle.kts
client/src-tauri/tauri-plugin-android-keystore/permissions/: default.toml
client/src-tauri/tauri-plugin-android-keystore/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
client/src-tauri/tauri-plugin-file-saver/: Cargo.toml  build.rs
client/src-tauri/tauri-plugin-file-saver/permissions/: default.toml
client/src-tauri/tauri-plugin-file-saver/src/: commands.rs  desktop.rs  lib.rs
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
server/.omc/state/: agent-replay-917fc5ca-2e4c-4fc8-96b0-281a2072f249.jsonl  last-tool-error.json  subagent-tracking.json
server/crates/messenger-crypto/: Cargo.toml
server/crates/messenger-crypto/src/: canonical.rs  error.rs  lib.rs  signing.rs
server/crates/messenger-entity/: Cargo.toml
server/crates/messenger-entity/src/: attachments.rs  device_provisioning_requests.rs  devices.rs  invitation_token_redemptions.rs  invitation_tokens.rs  key_change_events.rs  key_packages.rs  lib.rs  message_delivery_receipts.rs  mls_group_devices.rs  mls_group_members.rs  mls_groups.rs  mls_message_states.rs  mls_messages.rs  mls_welcomes.rs  prelude.rs  push_tokens.rs  reactions.rs  server_config.rs  user_identity_credentials.rs  users.rs
server/crates/messenger-migration/: Cargo.toml
server/crates/messenger-migration/src/: lib.rs  m20260601_000001_create_server_config.rs  m20260601_000002_create_users.rs  m20260601_000003_create_user_identity_credentials.rs  m20260601_000004_create_devices.rs  m20260601_000005_create_key_packages.rs  m20260601_000006_create_device_provisioning_requests.rs  m20260601_000007_create_key_change_events.rs  m20260601_000008_create_invitation_tokens.rs  m20260601_000009_create_invitation_token_redemptions.rs  m20260601_000010_create_mls_groups.rs  m20260601_000011_create_mls_group_members.rs  m20260601_000012_create_mls_group_devices.rs  m20260601_000013_create_mls_messages.rs  m20260601_000014_create_mls_message_states.rs  m20260601_000015_create_mls_welcomes.rs  m20260601_000016_create_attachments.rs  m20260601_000017_create_reactions.rs  m20260601_000018_create_message_delivery_receipts.rs  m20260601_000019_create_push_tokens.rs  m20260601_000020_add_provisioning_signing_key.rs  main.rs
server/crates/messenger-migration/tests/: migrations_test.rs
server/crates/messenger-proto/: Cargo.toml
server/crates/messenger-proto/src/: lib.rs
server/crates/messenger-server/: Cargo.toml
server/crates/messenger-server/src/: bootstrap.rs  config.rs  db.rs  error.rs  identity.rs  lib.rs  main.rs  state.rs  telemetry.rs  ws_registry.rs
server/crates/messenger-server/tests/: test_attachments.rs  test_auth.rs  test_bootstrap.rs  test_e2e_full_flow.rs  test_invites.rs  test_keypackages.rs  test_mls_messaging.rs  test_provisioning.rs  test_startup.rs  test_users_devices.rs  test_websocket.rs
(+98 files in other folders)
