[workspace]
resolver = "2"
members = ["crates/*", "src-tauri", "src-tauri/tauri-plugin-android-keystore", "src-tauri/tauri-plugin-file-saver"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
# UI
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Storage", "console",
    "Crypto", "SubtleCrypto", "CryptoKey",
    "IdbDatabase", "IdbFactory", "IdbOpenDbRequest", "IdbTransaction",
    "IdbObjectStore", "IdbRequest", "IdbCursor",
    "Blob",
    "Navigator", "Clipboard",
    "MediaQueryList",
] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["default", "futures"] }
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-shell = "2"
tauri-plugin-android-keystore = { path = "src-tauri/tauri-plugin-android-keystore" }

# Async
tokio = { version = "1", features = ["rt", "macros", "sync", "io-util"] }
futures-util = "0.3"

# Crypto / serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v7", "serde", "js"] }
blake3 = "1"
ed25519-dalek = "2"
x25519-dalek = "2"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# MLS
openmls = "0.8.1"
openmls_rust_crypto = "0.5"
openmls_traits = "0.5"

# AGE
age = "0.10"

# Symmetric encryption for attachments
aes-gcm = "0.10"

# Storage (только в нативных билдах)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
keyring = "3"

# Errors
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-wasm = "0.2"

[workspace.lints.rust]
# unsafe_code = "forbid" — НЕ ставим глобально, потому что JNI в C03 нужен unsafe.

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
