[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
sea-orm-migration = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
uuid = { version = "1", features = ["v7", "serde"] }
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
openmls = "0.6"
openmls_rust_crypto = "0.3"
openmls_traits = "0.3"
age = "0.10"
ed25519-dalek = "2"
rand = "0.8"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["env"] }
dotenvy = "0.15"
moka = { version = "0.12", features = ["sync"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
unicode-normalization = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
