[package]
name = "messenger-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "messenger_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "messenger-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-android-keystore = { path = "tauri-plugin-android-keystore" }
tauri-plugin-file-saver = { path = "tauri-plugin-file-saver" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
messenger-core = { path = "../crates/messenger-core" }
messenger-storage = { path = "../crates/messenger-storage" }
messenger-transcription = { path = "../crates/messenger-transcription" }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "io-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
