[package]
name = "messenger-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm-mls", "voice"]
native = ["messenger-core/native", "dep:openmls", "dep:age"]
web = ["messenger-core/web", "dep:serde-wasm-bindgen"]
wasm-mls = ["web", "messenger-core/wasm-mls", "dep:openmls", "dep:openmls_rust_crypto", "dep:openmls_traits"]
voice = ["messenger-core/voice"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
gloo-timers = { workspace = true }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing.workspace = true
tracing-wasm.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
blake3 = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
rmp-serde = { workspace = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Native-only deps (MLS, AGE)
openmls = { workspace = true, optional = true }
openmls_rust_crypto = { workspace = true, optional = true }
openmls_traits = { workspace = true, optional = true }
age = { workspace = true, optional = true }

# Internal crates
messenger-core = { path = "../messenger-core", default-features = false }
qrcode = "0.14"
messenger-proto = { path = "../messenger-proto" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
messenger-storage = { path = "../messenger-storage" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
messenger-storage = { path = "../messenger-storage", features = ["web"] }
web-sys = { workspace = true, features = ["HtmlVideoElement", "HtmlAudioElement", "HtmlInputElement", "HtmlSpanElement", "HtmlDivElement", "Element", "DomRect", "History", "MediaStream", "MediaStreamConstraints", "MediaStreamTrack", "MediaDevices", "File", "FileList", "FileReader", "Url", "BlobPropertyBag", "AudioContext", "AudioBuffer", "BaseAudioContext", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "DragEvent", "DataTransfer", "HtmlAnchorElement", "ClipboardEvent", "DataTransferItem", "DataTransferItemList", "Navigator"] }

[lints]
workspace = true
