[package]
name = "messenger-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
rand = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

# MLS (native only — openmls does not compile for wasm32)
openmls = { workspace = true, optional = true }
openmls_rust_crypto = { workspace = true, optional = true }
openmls_traits = { workspace = true, optional = true }
tls_codec = { version = "0.4", optional = true }

# AGE (native only — age crate uses std::io)
age = { workspace = true, optional = true }

# HMAC/SHA2 for blind index and reaction index
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

# Storage trait
messenger-storage = { path = "../messenger-storage", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
messenger-storage = { path = "../messenger-storage", features = ["native"] }

[features]
default = ["native"]
native = ["dep:openmls", "dep:openmls_rust_crypto", "dep:openmls_traits", "dep:tls_codec", "dep:age", "dep:hmac", "dep:sha2", "messenger-storage/native"]
web = ["messenger-storage/web"]

[lints]
workspace = true
