[package]
name = "messenger-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
rand = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

# MLS
openmls = { workspace = true, optional = true }
openmls_rust_crypto = { workspace = true, optional = true }
openmls_traits = { workspace = true, optional = true }
tls_codec = { version = "0.4", optional = true }

# AGE (native only — age crate uses std::io)
age = { workspace = true, optional = true }
bech32 = { version = "0.9", optional = true }

# Symmetric encryption for attachments
aes-gcm = { workspace = true }

# HMAC/SHA2 for blind index and reaction index
hmac = "0.12"
sha2 = "0.10"

# Proto types
messenger-proto = { path = "../messenger-proto" }

# Storage trait
messenger-storage = { path = "../messenger-storage", default-features = false }
mp4 = "0.14"
mse_fmp4 = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["AudioBuffer", "AudioContext", "BaseAudioContext", "MediaRecorder", "MediaRecorderOptions", "MediaStream", "MediaStreamTrack", "MediaDevices", "MediaStreamConstraints", "Navigator", "Blob", "BlobEvent", "BlobPropertyBag", "Performance", "Window", "console"] }
openmls = { workspace = true, optional = true, features = ["js"] }
openmls_rust_crypto = { workspace = true, optional = true }
openmls_traits = { workspace = true, optional = true }
tls_codec = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
messenger-storage = { path = "../messenger-storage", features = ["native"] }
rmp-serde = { workspace = true }

[features]
default = ["native"]
native = ["dep:openmls", "dep:openmls_rust_crypto", "dep:openmls_traits", "dep:tls_codec", "dep:age", "dep:bech32", "messenger-storage/native"]
web = ["messenger-storage/web"]
wasm-mls = ["web", "dep:openmls", "dep:openmls_rust_crypto", "dep:openmls_traits", "dep:tls_codec"]
voice = []

[lints]
workspace = true
