[package]
name = "messenger-storage"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rusqlite = { workspace = true, optional = true }
keyring = { workspace = true, optional = true }
hex = { workspace = true }
base64 = { workspace = true }
dirs = "5"
tokio = { workspace = true }
getrandom = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, optional = true, features = ["Window", "AesGcmParams"] }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
idb = { version = "0.6", optional = true }
gloo-timers = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test = "0.3"
tempfile = "3"

[features]
default = ["native"]
native = ["dep:rusqlite", "dep:keyring"]
web = ["dep:web-sys", "dep:wasm-bindgen", "dep:js-sys", "dep:wasm-bindgen-futures", "dep:idb", "dep:gloo-timers", "dep:serde_json"]
android = ["dep:jni"]

[lints]
workspace = true
