[package]
name = "tauri-plugin-android-keystore"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_plugin_android_keystore"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
tracing = "0.1"

[features]
default = ["mobile"]
mobile = []
desktop = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)'] }
