[package]
name = "messenger-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
openmls.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
age.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
hex.workspace = true

[lints]
workspace = true
