[package]
name = "messenger-entity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sea-orm.workspace = true
uuid.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]

[lints]
workspace = true
