[package]
name = "messenger-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_bytes.workspace = true
rmp-serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
