[package]
name = "messenger-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_bytes.workspace = true
rmp-serde.workspace = true
uuid.workspace = true
sea-orm.workspace = true
figment.workspace = true
dotenvy.workspace = true
moka.workspace = true
chrono.workspace = true
serde_json.workspace = true
hex.workspace = true

messenger-migration = { path = "../messenger-migration" }
messenger-crypto = { path = "../messenger-crypto" }
messenger-entity = { path = "../messenger-entity" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm-migration.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true

[lints]
workspace = true
